force-app/main/default/objects/ClassTimesSchedule__mdt/ClassTimesSchedule__mdt.object-meta.xml
<CustomObject>
    <description>存储节次与上课时间、下课时间的映射。</description>
    <label>节次时间表</label>
</CustomObject>