force-app/main/default/objects/ClassTimesSchedule__mdt/fields/ClassStartTime__c.field-meta.xml
<CustomField>
    <fullName>ClassStartTime__c</fullName>
    <inlineHelpText>请严格按照mm:ss格式输入数据，例如：00:30,06:40,17:05,23:00</inlineHelpText>
    <label>上课时间</label>
    <length>5</length>
    <type>Text</type>
</CustomField>