force-app/main/default/objects/ClassTimesSchedule__mdt/fields/ClassTimes__c.field-meta.xml
<CustomField>
    <fullName>ClassTimes__c</fullName>
    <label>节次</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>